added v12 to index.new.html

--- a/index.html
+++ b/index.html
@@ -946,12 +946,11 @@
                                 <div class="div_5">
                                     <strong class="added"> added </strong>
                                     <ul style="list-style-type: disc; padding-left: 20px;">
-                                        <li>new project page ui design</li>
+
                                     </ul>
                                     <strong class="removed"> removed </strong>
                                     <ul style="list-style-type: disc; padding-left: 20px;">
-                                        <li>social links on nav bar </li>
-                                        <li>some text and images on index.html and about.html</li>
+
 
                                     </ul>
                                     <strong class="amended"> amended </strong>
@@ -977,8 +976,7 @@
                                 <hr class="div_hr_3">
                                 <h2 class="h2_2"> dev 7 </h2>
                                 <p>20/12/22</p>
-                                <a class="header_date_a"
-                                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/d1d7341d58606be32ca2dda1c48250a7896b373b">#dev7</a>
+                                <a class="header_date_a" href="">#dev7</a>
                                 <div class="div_3">
                                     <strong class="amended"> amended </strong>
                                     <ul style="list-style-type: disc; padding-left: 20px;">
@@ -991,119 +989,17 @@
                                 <a class="header_date_a"
                                     href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/82">#82</a>
                                 <div class="div_3">
-                                    <strong class="amended"> amended </strong>
-                                    <ul style="list-style-type: disc; padding-left: 20px;">
-                                        <li>about section </li>
-                                        <li>project images </li>
+
                                     </ul>
                                 </div>
                                 <hr class="div_hr_3">
                                 <h2 class="h2_2"> dev 6 </h2>
                                 <p>20/12/22</p>
-                                <a class="header_date_a"
-                                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/3ba6778b72357bc226b5d1237938c60159ca589d">#dev6</a>
+                                <a class="header_date_a" href="">#dev6</a>
                                 <div class="div_3">
-                                    <strong class="amended"> amended </strong>
-                                    <ul style="list-style-type: disc; padding-left: 20px;">
-                                        <li>project images </li>
+
                                     </ul>
                                 </div>
-                                <hr class="div_hr_3">
-                                <h2 class="h2_2"> dev 5 </h2>
-                                <p>20/12/22</p>
-                                <a class="header_date_a"
-                                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/2ad192f35d93cb2959fcc392f8012db15664e762">#dev5</a>
-                                <div class="div_3">
-                                    <strong class="amended"> amended </strong>
-                                    <ul style="list-style-type: disc; padding-left: 20px;">
-                                        <li>about section </li>
-                                    </ul>
-                                </div>
-                                <hr class="div_hr_3">
-                                <h2 class="h2_2"> rc 1 </h2>
-                                <p>20/12/22</p>
-                                <a class="header_date_a"
-                                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/81">#81</a>
-                                <div class="div_3">
-                                    <strong class="added"> added </strong>
-                                    <ul style="list-style-type: disc; padding-left: 20px;">
-                                        <li>new project page ui design</li>
-                                    </ul>
-                                    <strong class="removed"> removed </strong>
-                                    <ul style="list-style-type: disc; padding-left: 20px;">
-                                        <li>social links on nav bar </li>
-                                        <li>some text and images on index.html and about.html</li>
-                                    </ul>
-                                    <strong class="fixed"> fixed </strong>
-                                    <ul style="list-style-type: disc; padding-left: 20px;">
-                                        <li>new project page ui not displaying correctly on small screens </li>
-                                    </ul>
-                                    <strong class="amended"> amended </strong>
-                                    <ul style="list-style-type: disc; padding-left: 20px;">
-                                        <li>projet.html location</li>
-                                        <li>twitter and github links</li>
-                                        <li>readme.md </li>
-                                </div>
-                                <hr class="div_hr_3">
-                                <h2 class="h2_2"> dev 4 </h2>
-                                <p>20/12/22</p>
-                                <a class="header_date_a"
-                                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/829bfc3d073447174980f27c527d7b775dfb7e8b">#dev4</a>
-                                <div class="div_3">
-                                    <strong class="amended"> amended </strong>
-                                    <ul style="list-style-type: disc; padding-left: 20px;">
-                                        <li>readme.md </li>
-                                    </ul>
-                                </div>
-                                <hr class="div_hr_3">
-                                <h2 class="h2_2"> dev 3 </h2>
-                                <p>20/12/22</p>
-                                <a class="header_date_a"
-                                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/d43267e3e1c62a3571b573d2d625de81ddba2f41">#dev3</a>
-                                <div class="div_3">
-                                    <strong class="fixed"> fixed</strong>
-                                    <ul style="list-style-type: disc; padding-left: 20px;">
-                                        <li>new project page ui not display correctly on small screens </li>
-                                    </ul>
-                                </div>
-                                <hr class="div_hr_3">
-                                <h2 class="h2_2"> dev 2 </h2>
-                                <p>20/12/22</p>
-                                <a class="header_date_a"
-                                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/3784bb7c8dbe38c593f4c44bbfe29a879d671bc4">#dev2</a>
-                                <div class="div_3">
-                                    <strong class="removed">removed</strong>
-                                    <ul style="list-style-type: disc; padding-left: 20px;">
-                                        <li>social links on nav bar </li>
-                                        <li>some text and images on index.html and about.html</li>
-                                    </ul>
-                                </div>
-                                <hr class="div_hr_3">
-                                <h2 class="h2_2"> dev 1 </h2>
-                                <p>19/11/22</p>
-                                <a class="header_date_a"
-                                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/f52586aaf86f92125d613ae37071ff53657aa3bc">#dev1</a>
-                                <div class="div_3">
-                                    <strong class="added"> added</strong>
-                                    <ul style="list-style-type: disc; padding-left: 20px;">
-                                        <li>new project page ui design</li>
-                                    </ul>
-                                    <strong class="issues_rc1">please note:</strong>
-                                    <ul style="list-style-type: disc; padding-left: 20px;">
-                                        <li class="known_li">new project page ui design is not yet mobile friendly
-                                            and is a work in progress</li>
-                                    </ul>
-                                </div>
-                                <hr class="div_hr_3">
-                                <h2 class="h2_2"> pre dev 1 </h2>
-                                <p>26/10/22</p>
-                                <a class="header_date_a"
-                                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/f3135146166d9f72c3c8f75593dbf2ffa9a59f83">#predev1</a>
-                                <div class="div_3">
-                                    <strong class="amended"> amended </strong>
-                                    <ul style="list-style-type: disc; padding-left: 20px;">
-                                        <li>project.html location</li>
-                                    </ul>
-                                </div>
+
 
 </html>
