--- a/index.new.html
+++ b/index.new.html
@@ -1238,13 +1238,13 @@
         <hr id="v12">
         <div class="version">
             <h2>V12</h2>
-            <h3 class="version_date"> 26/04/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/"
+            <h3 class="version_date"> 20/12/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/83"
                     class="a_link"><img class="svg_git"
                         src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">
-                    41</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v10.1/index.html" class="a_link"><img
+                    83</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v12/index.html" class="a_link"><img
                         class="svg_git" src="https://assets.hannahcodes.co.uk/images/logo/monitor-light.svg">
                     website</a>
-                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v10.1"
+                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v12"
                     class="a_link"><img class="svg_git"
                         src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">
                     source-code</a>
@@ -1253,98 +1253,185 @@
                 <li>
                     <strong class="added">added</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>new project page ui design</li>
                         </ll>
                     </ul>
                 <li>
-                    <strong class="fixed">fixed:</strong>
+                    <strong class="removed">removed:</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>social links on nav bar </li>
+                        <li>some text and images on index.html and about.html</li>
+                    </ul>
+                <li>
+                    <strong class="amended">amended</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>projet.html location</li>
+                        <li>twitter and github links</li>
+                        <li>readme.md </li>
+                        <li>about section </li>
+                        <li>project images </li>
+                        </ll>
                     </ul>
                 </li>
                 <hr class="hr_divider">
                 <h3 class="h3_header"> rc 3</h3>
-                <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+                <h3> 20/12/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/84" class="a_link">
                         <img class="svg_git"
-                            src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                            src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">84</a></h3>
+                <strong class="amended"> amended </strong>
+                <ul style="list-style-type: disc; padding-left: 20px;">
+                    <li>readme.md file</li>
+                </ul>
+            </ul>
+            </li>
+            <hr class="hr_divider">
+            <h3 class="h3_header"> dev 7</h3>
+            <h3> 20/12/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/d1d7341d58606be32ca2dda1c48250a7896b373b"
+                    class="a_link">
+                    <img class="svg_git"
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...a7896b373b</a></h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>readme.md file</li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
             <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3> 20/12/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/82" class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">82</a></h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>about section </li>
+                <li>project images </li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
-                    <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+            <h3 class="h3_header"> Dev 6</h3>
+            <h3> 20/12/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/3ba6778b72357bc226b5d1237938c60159ca589d"
+                    class="a_link">
+                    <img class="svg_git" src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...</a>
+            </h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>project images </li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Dev 5</h3>
+            <h3> 20/12/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/2ad192f35d93cb2959fcc392f8012db15664e762"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">...b15664e762</a>
+            </h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>about section </li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> rc 1</h3>
+            <h3> 20/12/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/81" class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">81/a></h3>
+            <strong class="added"> added </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>new project page ui design</li>
+            </ul>
+            <strong class="removed"> removed </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>social links on nav bar </li>
+                <li>some text and images on index.html and about.html</li>
+            </ul>
+            <strong class="fixed"> fixed </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>new project page ui not displaying correctly on small screens </li>
+            </ul>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>projet.html location</li>
+                <li>twitter and github links</li>
+                <li>readme.md </li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Dev 4</h3>
+            <h3> 20/12/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/829bfc3d073447174980f27c527d7b775dfb7e8b"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...775dfb7e8b</a>
+            </h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>readme.md </li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Dev 3</h3>
+            <h3> 20/12/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/d43267e3e1c62a3571b573d2d625de81ddba2f41"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...81ddba2f41</a></h3>
+            <strong class="fixed"> fixed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>new project page ui not display correctly on small screens </li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Dev 2</h3>
+            <h3> 20/12/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/3784bb7c8dbe38c593f4c44bbfe29a879d671bc4"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...879d671bc4</a></h3>
+            <strong class="removed">removed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>social links on nav bar </li>
+                <li>some text and images on index.html and about.html</li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Dev 1</h3>
+            <h3> 19/11/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/f52586aaf86f92125d613ae37071ff53657aa3bc"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...53657aa3bc</a></h3>
+            <strong class="added"> added</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>new project page ui design</li>
+            </ul>
+            <strong class="issues_rc1">please note:</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li class="known_li">new project page ui design is not yet mobile friendly
+                    and is a work in progress</li>
+
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Pre Dev 1</h3>
+            <h3> 26/10/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/f3135146166d9f72c3c8f75593dbf2ffa9a59f83"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
-            </ul>
-            </ul>
-            </li>
-            <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
-                    <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...ffa9a59f83</a></h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>project.html location</li>
             </ul>
             </ul>
             </li>
