readded poppins font style

--- a/index.new.html
+++ b/index.new.html
@@ -7,9 +7,7 @@
     <title>hannah code changelog</title>
     <link rel="stylesheet" href="./assets/css/main-new.css">
     <link rel="icon" href="https://assets.hannahcodes.co.uk/images/home_pics/hc-with-bg-v2.ico" />
-    <style>
-
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -1203,33 +1201,54 @@
             </li>
             <hr class="hr_divider">
             <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3> 17/01/23<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/ae2d9d98446c37b1cba734dd8dce376ec6739c22"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...6ec6739c22</a></h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>copyright date from 2022 to 2023</li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Dev 2</h3>
+            <h3> 03/01/23<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/c863e22cebbff3229ff7ee32f466ad1ffcd8eb26"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...1ffcd8eb26</a></h3>
+            <strong class="removed"> removed </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>some style code from main.scss/.css</li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Dev 1</h3>
+            <h3> 03/01/23<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/30ad8144aeb1fdb5c922caca18c182b381c68430"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...b381c68430</a></h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>introduction text on index.html</li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Pre dev 1</h3>
+            <h3> 20/08/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/fdc99439faaaaa2c5eb3a63878bb6db100b1adfe"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...b100b1adfe</a>
+                <strong class="removed"> removed </strong>
+                <ul style="list-style-type: disc; padding-left: 20px;">
+                    <li>terms.html and terms folder</li>
+            </h3>
             </ul>
             </ul>
             </li>
