--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hannah code changelog</title>
-    <link rel="stylesheet" href="./assets/css/main-new.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="icon" href="https://assets.hannahcodes.co.uk/images/home_pics/hc-with-bg-v2.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
